Multiple sliders drag clone overflow fix

--- a/styles/core/widgets/_slider.scss
+++ b/styles/core/widgets/_slider.scss
@@ -41,7 +41,7 @@
 	display: block;
 	position: relative;
 	width: 100%;
-	// overflow: hidden;
+	overflow: hidden;
 
 	.slider-movable {
 		display: block;
